B： 真正的账户边界控制：UserController.java 不再用实体直接接收登录/注册/更新请求，而是拆成了注册、登录、管理员创建/更新、当前用户资料更新、改密五类 DTO；登录和改密都改成 PasswordEncoder 哈希校验；注册接口强制服务端写死 USER 角色，不能再从前端传角色；普通用户资料更新改成 /api/user/me，不会再提交 role/status/password。对应的密码编码器也已经在 SecurityConfig.java 注入，findByUsernameAndPassword 也已从 UserRepository.java 移除。
前端也同步切到了新契约：Register.vue 不再传 role；三个个人资料页 admin/Profile.vue、user/Profile.vue、maintainer/Profile.vue 都改为调用 /user/me 语义；frontend/src/api/index.js 也增加了 updateProfile。