@@ -2,168 +2,217 @@ package com.facility.booking.controller;
 
 import com.facility.booking.common.Result;
 import com.facility.booking.dto.auth.AuthResponse;
+import com.facility.booking.dto.user.AdminUserCreateRequest;
+import com.facility.booking.dto.user.AdminUserUpdateRequest;
+import com.facility.booking.dto.user.ChangePasswordRequest;
+import com.facility.booking.dto.user.CurrentUserProfileUpdateRequest;
+import com.facility.booking.dto.user.LoginRequest;
+import com.facility.booking.dto.user.RegisterRequest;
 import com.facility.booking.entity.User;
 import com.facility.booking.repository.UserRepository;
+import com.facility.booking.security.CurrentUserService;
 import com.facility.booking.security.CustomUserPrincipal;
 import com.facility.booking.security.JwtTokenProvider;
 import com.facility.booking.service.ViolationRecordService;
-import org.springframework.beans.factory.annotation.Autowired;
+import jakarta.validation.Valid;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/user")
 public class UserController {
 
-    @Autowired
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
+    private final ViolationRecordService violationRecordService;
+    private final JwtTokenProvider jwtTokenProvider;
+    private final PasswordEncoder passwordEncoder;
+    private final CurrentUserService currentUserService;
 
-    @Autowired
-    private ViolationRecordService violationRecordService;
-
-    @Autowired
-    private JwtTokenProvider jwtTokenProvider;
+    public UserController(
+            UserRepository userRepository,
+            ViolationRecordService violationRecordService,
+            JwtTokenProvider jwtTokenProvider,
+            PasswordEncoder passwordEncoder,
+            CurrentUserService currentUserService
+    ) {
+        this.userRepository = userRepository;
+        this.violationRecordService = violationRecordService;
+        this.jwtTokenProvider = jwtTokenProvider;
+        this.passwordEncoder = passwordEncoder;
+        this.currentUserService = currentUserService;
+    }
 
     @PostMapping("/login")
-    public Result<AuthResponse> login(@RequestBody User user) {
-        Optional<User> userOpt = userRepository.findByUsernameAndPassword(user.getUsername(), user.getPassword());
-        if (userOpt.isEmpty()) {
+    public Result<AuthResponse> login(@Valid @RequestBody LoginRequest request) {
+        Optional<User> userOpt = userRepository.findByUsername(request.getUsername());
+        if (userOpt.isEmpty() || !passwordEncoder.matches(request.getPassword(), userOpt.get().getPassword())) {
             return Result.error("用户名或密码错误");
         }
         return Result.success("登录成功", buildAuthResponse(userOpt.get()));
     }
 
     @PostMapping("/register")
-    public Result<AuthResponse> register(@RequestBody User user) {
-        Optional<User> existingUser = userRepository.findByUsername(user.getUsername());
-        if (existingUser.isPresent()) {
+    public Result<AuthResponse> register(@Valid @RequestBody RegisterRequest request) {
+        if (userRepository.findByUsername(request.getUsername()).isPresent()) {
             return Result.error("用户名已存在");
         }
 
-        if (user.getEmail() != null && !user.getEmail().isEmpty()) {
-            Optional<User> existingEmailUser = userRepository.findByEmail(user.getEmail());
-            if (existingEmailUser.isPresent()) {
-                return Result.error("邮箱已被使用");
-            }
+        if (request.getEmail() != null && !request.getEmail().isBlank()
+                && userRepository.findByEmail(request.getEmail()).isPresent()) {
+            return Result.error("邮箱已被使用");
         }
 
-        if (user.getRole() == null || user.getRole().isEmpty()) {
-            user.setRole("USER");
-        }
-        if (user.getStatus() == null || user.getStatus().isEmpty()) {
-            user.setStatus("ACTIVE");
-        }
+        User user = new User();
+        user.setUsername(request.getUsername().trim());
+        user.setPassword(passwordEncoder.encode(request.getPassword()));
+        user.setRealName(request.getRealName().trim());
+        user.setEmail(blankToNull(request.getEmail()));
+        user.setPhone(blankToNull(request.getPhone()));
+        user.setRole("USER");
+        user.setStatus("ACTIVE");
 
         User savedUser = userRepository.save(user);
         return Result.success("注册成功", buildAuthResponse(savedUser));
     }
 
     @GetMapping("/list")
+    @PreAuthorize("hasRole('ADMIN')")
     public Result<Page<User>> list(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size) {
         try {
             PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
             Page<User> users = userRepository.findAll(pageRequest);
-            users.forEach(user -> {
-                violationRecordService.recalculateUserCreditScoreAndViolationCount(user.getId());
-                user.setCreditScore(violationRecordService.getUserCurrentCreditScore(user.getId()));
-                user.setViolationCount(violationRecordService.getUserViolationCount(user.getId()));
-                user.setPassword("******");
-            });
-            return Result.success(users);
+            return Result.success(users.map(this::toSafeUser));
         } catch (Exception e) {
             return Result.error("获取用户列表失败: " + e.getMessage());
         }
     }
 
     @GetMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
     public Result<User> getById(@PathVariable Long id) {
         Optional<User> user = userRepository.findById(id);
-        if (user.isPresent()) {
-            User foundUser = user.get();
-            violationRecordService.recalculateUserCreditScoreAndViolationCount(foundUser.getId());
-            foundUser.setCreditScore(violationRecordService.getUserCurrentCreditScore(foundUser.getId()));
-            foundUser.setViolationCount(violationRecordService.getUserViolationCount(foundUser.getId()));
-            foundUser.setPassword("******");
-            return Result.success(foundUser);
+        if (user.isEmpty()) {
+            return Result.error("用户不存在");
         }
-        return Result.error("用户不存在");
+
+        return Result.success(toSafeUser(user.get()));
     }
 
     @PostMapping
-    public Result<User> create(@RequestBody User user) {
-        Optional<User> existingUser = userRepository.findByUsername(user.getUsername());
-        if (existingUser.isPresent()) {
+    @PreAuthorize("hasRole('ADMIN')")
+    public Result<User> create(@Valid @RequestBody AdminUserCreateRequest request) {
+        if (userRepository.findByUsername(request.getUsername()).isPresent()) {
             return Result.error("用户名已存在");
         }
+
+        if (request.getEmail() != null && !request.getEmail().isBlank()
+                && userRepository.findByEmail(request.getEmail()).isPresent()) {
+            return Result.error("邮箱已被使用");
+        }
+
+        User user = new User();
+        user.setUsername(request.getUsername().trim());
+        user.setPassword(passwordEncoder.encode(request.getPassword()));
+        user.setRealName(request.getRealName().trim());
+        user.setRole(request.getRole());
+        user.setPhone(blankToNull(request.getPhone()));
+        user.setEmail(blankToNull(request.getEmail()));
+        user.setAvatar(blankToNull(request.getAvatar()));
+        user.setStatus(defaultIfBlank(request.getStatus(), "ACTIVE"));
+
         User savedUser = userRepository.save(user);
-        savedUser.setPassword("******");
-        return Result.success("创建成功", savedUser);
+        return Result.success("创建成功", toSafeUser(savedUser));
     }
 
     @PutMapping("/{id}")
-    public Result<User> update(@PathVariable Long id, @RequestBody User user) {
+    @PreAuthorize("hasRole('ADMIN')")
+    public Result<User> update(@PathVariable Long id, @Valid @RequestBody AdminUserUpdateRequest request) {
         Optional<User> userOpt = userRepository.findById(id);
         if (userOpt.isEmpty()) {
             return Result.error("用户不存在");
         }
 
         User existingUser = userOpt.get();
-        existingUser.setRealName(user.getRealName());
-        existingUser.setPhone(user.getPhone());
-        existingUser.setEmail(user.getEmail());
-        existingUser.setRole(user.getRole());
-        existingUser.setStatus(user.getStatus());
-        existingUser.setAvatar(user.getAvatar());
-
-        if (user.getPassword() != null && !user.getPassword().trim().isEmpty()) {
-            existingUser.setPassword(user.getPassword());
+        if (request.getEmail() != null && !request.getEmail().isBlank()) {
+            Optional<User> existingEmailUser = userRepository.findByEmail(request.getEmail());
+            if (existingEmailUser.isPresent() && !existingEmailUser.get().getId().equals(id)) {
+                return Result.error("邮箱已被使用");
+            }
         }
 
+        existingUser.setRealName(request.getRealName().trim());
+        existingUser.setPhone(blankToNull(request.getPhone()));
+        existingUser.setEmail(blankToNull(request.getEmail()));
+        existingUser.setRole(request.getRole());
+        existingUser.setStatus(defaultIfBlank(request.getStatus(), "ACTIVE"));
+        existingUser.setAvatar(blankToNull(request.getAvatar()));
+
         User savedUser = userRepository.save(existingUser);
-        savedUser.setPassword("******");
-        return Result.success("更新成功", savedUser);
+        return Result.success("更新成功", toSafeUser(savedUser));
+    }
+
+    @PutMapping("/me")
+    public Result<User> updateCurrentUser(@Valid @RequestBody CurrentUserProfileUpdateRequest request) {
+        Long currentUserId = currentUserService.getCurrentUserId();
+        if (currentUserId == null) {
+            return Result.error(401, "未登录或登录已失效");
+        }
+
+        Optional<User> userOpt = userRepository.findById(currentUserId);
+        if (userOpt.isEmpty()) {
+            return Result.error("用户不存在");
+        }
+
+        User existingUser = userOpt.get();
+        if (request.getEmail() != null && !request.getEmail().isBlank()) {
+            Optional<User> existingEmailUser = userRepository.findByEmail(request.getEmail());
+            if (existingEmailUser.isPresent() && !existingEmailUser.get().getId().equals(currentUserId)) {
+                return Result.error("邮箱已被使用");
+            }
+        }
+
+        existingUser.setRealName(request.getRealName().trim());
+        existingUser.setPhone(blankToNull(request.getPhone()));
+        existingUser.setEmail(blankToNull(request.getEmail()));
+        existingUser.setAvatar(blankToNull(request.getAvatar()));
+
+        User savedUser = userRepository.save(existingUser);
+        return Result.success("更新成功", toSafeUser(savedUser));
     }
 
     @PostMapping("/{id}/change-password")
-    public Result<String> changePassword(@PathVariable Long id, @RequestBody Map<String, String> passwordData) {
+    public Result<String> changePassword(@PathVariable Long id, @Valid @RequestBody ChangePasswordRequest request) {
+        if (!canAccessUser(id)) {
+            return Result.error(403, "无权修改该用户密码");
+        }
+
         Optional<User> userOpt = userRepository.findById(id);
         if (userOpt.isEmpty()) {
             return Result.error("用户不存在");
         }
 
-        String currentPassword = passwordData.get("currentPassword");
-        String newPassword = passwordData.get("newPassword");
-
-        if (currentPassword == null || currentPassword.trim().isEmpty()) {
-            return Result.error("当前密码不能为空");
-        }
-        if (newPassword == null || newPassword.trim().isEmpty()) {
-            return Result.error("新密码不能为空");
-        }
-        if (newPassword.length() < 6 || newPassword.length() > 20) {
-            return Result.error("新密码长度必须在6-20个字符之间");
-        }
-
         User existingUser = userOpt.get();
-        if (!currentPassword.equals(existingUser.getPassword())) {
+        if (!passwordEncoder.matches(request.getCurrentPassword(), existingUser.getPassword())) {
             return Result.error("当前密码错误");
         }
 
-        existingUser.setPassword(newPassword);
+        existingUser.setPassword(passwordEncoder.encode(request.getNewPassword()));
         userRepository.save(existingUser);
         return Result.success("密码修改成功", null);
     }
 
     @DeleteMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
     public Result<Void> delete(@PathVariable Long id) {
         if (!userRepository.existsById(id)) {
             return Result.error("用户不存在");
@@ -173,20 +222,54 @@ public class UserController {
     }
 
     @GetMapping("/search")
+    @PreAuthorize("hasRole('ADMIN')")
     public Result<List<User>> searchUsers(@RequestParam String keyword) {
         if (keyword == null || keyword.trim().isEmpty()) {
             return Result.success(new ArrayList<>());
         }
 
-        String searchTerm = "%" + keyword.trim() + "%";
-        List<User> users = userRepository.findByRealNameLikeOrUsernameLike(searchTerm);
-        users.forEach(user -> {
-            violationRecordService.recalculateUserCreditScoreAndViolationCount(user.getId());
-            user.setCreditScore(violationRecordService.getUserCurrentCreditScore(user.getId()));
-            user.setViolationCount(violationRecordService.getUserViolationCount(user.getId()));
-            user.setPassword("******");
-        });
+        List<User> users = userRepository.findByRealNameLikeOrUsernameLike(keyword.trim())
+                .stream()
+                .map(this::toSafeUser)
+                .toList();
         return Result.success(users);
+    }
+
+    private User toSafeUser(User user) {
+        User safeUser = new User();
+        safeUser.setId(user.getId());
+        safeUser.setUsername(user.getUsername());
+        safeUser.setRealName(user.getRealName());
+        safeUser.setRole(user.getRole());
+        safeUser.setPhone(user.getPhone());
+        safeUser.setEmail(user.getEmail());
+        safeUser.setAvatar(user.getAvatar());
+        safeUser.setStatus(user.getStatus());
+        safeUser.setCreatedAt(user.getCreatedAt());
+        safeUser.setUpdatedAt(user.getUpdatedAt());
+        violationRecordService.recalculateUserCreditScoreAndViolationCount(user.getId());
+        safeUser.setCreditScore(violationRecordService.getUserCurrentCreditScore(user.getId()));
+        safeUser.setViolationCount(violationRecordService.getUserViolationCount(user.getId()));
+        safeUser.setPassword("******");
+        return safeUser;
+    }
+
+    private boolean canAccessUser(Long userId) {
+        CustomUserPrincipal currentUser = currentUserService.getCurrentUser();
+        return currentUser != null && ("ADMIN".equals(currentUser.role()) || currentUser.id().equals(userId));
+    }
+
+    private String blankToNull(String value) {
+        if (value == null) {
+            return null;
+        }
+        String trimmed = value.trim();
+        return trimmed.isEmpty() ? null : trimmed;
+    }
+
+    private String defaultIfBlank(String value, String defaultValue) {
+        String normalized = blankToNull(value);
+        return normalized == null ? defaultValue : normalized;
     }
 
     private AuthResponse buildAuthResponse(User user) {
